--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "Moonridge",
-    "version": "0.0.1",
+    "name": "moonridge",
+    "version": "0.0.2",
     "dependencies": {
         "lodash": "~2.2",
         "mongoose": "~3.8",
