--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "moonridge",
-    "version": "0.0.3",
+    "version": "0.0.4",
+    "main": "main.js",
     "dependencies": {
         "lodash": "~2.2",
         "mongoose": "~3.8",
