--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "moonridge",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "main": "main.js",
     "author": "Capaj <capajj@gmail.com>",
     "description": "Bring your Mongoose models straight into angular web app with live Query support, all thanks to the magic of socket.io",
@@ -17,7 +17,9 @@
         "mongoose": "~3.8",
         "socket.io": "latest",
         "socket.io-rpc": "latest",
-        "when": "latest"
+        "when": "latest",
+        "grunt-contrib-concat": "latest",
+        "grunt": "latest"
     },
     "license": "MIT"
 }
