--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moonridge",
-  "version": "0.3.11",
+  "version": "0.3.12",
   "main": "main.js",
   "author": "Capaj <capajj@gmail.com>",
   "description": "Bring your Mongoose models straight into angular web app with live Query support, all thanks to the magic of socket.io",
@@ -21,12 +21,13 @@
     "mongoose": "~3.8",
     "socket.io": "latest",
     "socket.io-rpc": "latest",
-    "bluebird": "latest",
+    "bluebird": "~1.0",
     "grunt-contrib-concat": "latest",
     "grunt-contrib-uglify": "0.2.7",
     "grunt-ng-annotate": "0.0.4",
     "grunt": "0.4.2",
-    "grunt-contrib-less": "~0.8.3"
+    "grunt-contrib-less": "~0.9",
+    "winston": "~0.7.2"
   },
   "license": "MIT"
 }
