--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moonridge",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "main": "main.js",
   "author": "Capaj <capajj@gmail.com>",
   "description": "Bring your Mongoose models straight into angular web app with live Query support, all thanks to the magic of socket.io",
@@ -11,6 +11,8 @@
     "liveQuery",
     "realtime",
     "mongo",
+    "mean",
+    "angular",
     "mongoose"
   ],
   "repository": {
@@ -22,11 +24,11 @@
     "mongoose": "~3.8",
     "socket.io": "latest",
     "socket.io-rpc": "latest",
-    "bluebird": "~1.0",
+    "bluebird": "~1.1",
     "grunt-contrib-concat": "latest",
     "grunt-contrib-uglify": "~0.4",
     "grunt-ng-annotate": "0.0.4",
-    "grunt": "0.4.2",
+    "grunt": "0.4.3",
     "grunt-contrib-less": "~0.10",
     "winston": "~0.7.2"
   },
