--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moonridge",
-  "version": "0.4.13",
+  "version": "0.4.14",
   "main": "main.js",
   "author": "Capaj <capajj@gmail.com>",
   "description": "Bring your Mongoose models straight into angular web app with live Query support, all thanks to the magic of socket.io",
@@ -27,12 +27,13 @@
     "bluebird": "~1.1",
     "winston": "~0.7.2"
   },
-    "devDependencies": {
-        "grunt-contrib-concat": "latest",
-        "grunt-contrib-uglify": "~0.4",
-        "grunt-ng-annotate": "0.0.4",
-        "grunt": "0.4.3",
-        "grunt-contrib-less": "~0.10"
-    },
+  "devDependencies": {
+    "grunt-contrib-concat": "latest",
+    "grunt-contrib-uglify": "~0.4",
+    "grunt-ng-annotate": "0.0.4",
+    "grunt": "0.4.3",
+    "grunt-contrib-less": "~0.10",
+    "grunt-angular-templates": "^0.5.4"
+  },
   "license": "MIT"
 }
