added test and karma conf

--- a/e2e-smoketest/bower.json
+++ b/e2e-smoketest/bower.json
@@ -3,14 +3,17 @@
   "version": "0.0.2",
   "dependencies": {
     "moment": "~2.6",
-    "angular": "1.2.20",
-    "angular-route": "1.2.20",
-    "angular-loader": "1.2.20",
-    "angular-animate": "1.2.20",
+    "angular": "1.2.21",
+    "angular-route": "1.2.21",
+    "angular-loader": "1.2.21",
+    "angular-animate": "1.2.21",
     "angular-moment": "latest",
     "angularLocalStorage-nc": "~0.2.1",
     "script.js": "latest",
     "jquery": "~2.1"
   },
-  "env": "dev"
+  "env": "dev",
+  "resolutions": {
+    "angular": "1.2.21"
+  }
 }
