--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moonridge",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "main": "main.js",
   "author": "Capaj <capajj@gmail.com>",
   "description": "Bring your Mongoose models straight into angular web app with live Query support, all thanks to the magic of socket.io",
@@ -11,9 +11,11 @@
     "liveQuery",
     "realtime",
     "mongo",
+    "mongoDB",
     "mean",
     "angular",
-    "mongoose"
+    "mongoose",
+    "mongoosejs"
   ],
   "repository": {
     "type": "git",
