--- a/e2e-smoketest/bower.json
+++ b/e2e-smoketest/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "moment": "~2.6",
     "angular": "1.2.21",
+    "angular-mocks": "1.2.21",
     "angular-route": "1.2.21",
     "angular-loader": "1.2.21",
     "angular-animate": "1.2.21",
