--- a/e2e-smoketest/bower.json
+++ b/e2e-smoketest/bower.json
@@ -3,18 +3,15 @@
   "version": "0.0.2",
   "dependencies": {
     "moment": "~2.6",
-    "angular": "1.2.21",
-    "angular-mocks": "1.2.21",
-    "angular-route": "1.2.21",
-    "angular-loader": "1.2.21",
-    "angular-animate": "1.2.21",
+    "angular": "1.3.0-beta.18",
+    "angular-mocks": "1.3.0-beta.18",
+    "angular-route": "1.3.0-beta.18",
+    "angular-loader": "1.3.0-beta.18",
+    "angular-animate": "1.3.0-beta.18",
     "angular-moment": "latest",
     "angularLocalStorage-nc": "~0.2.1",
     "script.js": "latest",
     "jquery": "~2.1"
   },
-  "env": "dev",
-  "resolutions": {
-    "angular": "1.2.21"
-  }
+  "env": "dev"
 }
