--- a/e2e-smoketest/bower.json
+++ b/e2e-smoketest/bower.json
@@ -13,5 +13,8 @@
     "script.js": "latest",
     "jquery": "~2.1"
   },
-  "env": "dev"
+  "env": "dev",
+  "resolutions": {
+    "angular": "1.3.0-beta.18"
+  }
 }
