--- a/e2e-smoketest/package.json
+++ b/e2e-smoketest/package.json
@@ -1,15 +1,21 @@
 {
+  "name": "Moonridge-test",
+  "version": "0.0.6",
+  "dependencies": {
+    "lodash": "~2.4",
+    "mongoose": "~3.8",
+    "morgan": "^1.1.1",
+    "express": "~4"
+  },
+  "devDependencies": {
+    "grunt-karma": "~0.9",
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4"
+  },
+  "jspm": {
     "name": "Moonridge-test",
-    "version": "0.0.6",
     "dependencies": {
-        "lodash": "~2.4",
-        "mongoose": "~3.8",
-		"morgan": "^1.1.1",
-		"express": "~4"
-    },
-    "devDependencies": {
-        "grunt-karma": "~0.9",
-        "karma-jasmine": "^0.1.5",
-        "karma-phantomjs-launcher": "^0.1.4"
+      "angular": "^1.3.0"
     }
+  }
 }
