--- a/e2e-smoketest/package.json
+++ b/e2e-smoketest/package.json
@@ -15,7 +15,10 @@
   "jspm": {
     "name": "Moonridge-test",
     "dependencies": {
-      "angular": "^1.3.0"
+      "angular": "^1.3.0",
+      "jquery": "^2.1.1",
+      "angular-animate": "^1.3.0",
+      "github:urish/angular-moment": "^0.8.2"
     }
   }
 }
