--- a/e2e-smoketest/package.json
+++ b/e2e-smoketest/package.json
@@ -5,7 +5,7 @@
     "lodash": "~2.4",
     "mongoose": "~3.8",
     "morgan": "^1.1.1",
-    "express": "~4"
+    "express": "~4.10"
   },
   "devDependencies": {
     "grunt-karma": "~0.9",
@@ -16,9 +16,11 @@
     "name": "Moonridge-test",
     "dependencies": {
       "angular": "^1.3.0",
-      "jquery": "^2.1.1",
       "angular-animate": "^1.3.0",
-      "github:urish/angular-moment": "^0.8.2"
+      "css": "^0.1.0",
+      "github:urish/angular-moment": "^0.8.2",
+      "jquery": "^2.1.1",
+      "text": "^0.0.2"
     }
   }
 }
