--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
     "type": "git",
     "url": "https://github.com/capaj/Moonridge.git"
   },
-  "homepage" : "http://capaj.github.io/Moonridge/",
+  "homepage": "http://capaj.github.io/Moonridge/",
   "dependencies": {
+    "bluebird": "~2.3",
+    "express": "^4.10.1",
     "lodash": "~2.4",
     "socket.io": "1.2.0",
     "socket.io-rpc": "0.7.4",
-    "bluebird": "~2.3",
     "winston": "~0.8"
   },
   "peerDependencies": {
-     "mongoose": "~3.8"
+    "mongoose": "~3.8"
   },
   "devDependencies": {
     "grunt-contrib-uglify": "~0.5",
