--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moonridge",
-  "version": "0.6.2",
+  "version": "0.6.3",
   "main": "main.js",
   "author": "Capaj <capajj@gmail.com>",
   "description": "Bring your Mongoose models straight into angular web app with live Query support, all thanks to the magic of socket.io",
@@ -24,18 +24,18 @@
   "homepage": "http://capaj.github.io/Moonridge/",
   "dependencies": {
     "bluebird": "~2.3",
-    "express": "^4.10.1",
+    "express": "^4.10",
     "lodash": "~2.4",
     "socket.io": "1.2.0",
-    "socket.io-rpc": "0.8.3",
+    "socket.io-rpc": "0.8.4",
     "winston": "~0.8"
   },
   "peerDependencies": {
-    "mongoose": "~3.8"
+    "mongoose": "^3.8"
   },
   "devDependencies": {
     "grunt-contrib-uglify": "~0.6",
-    "grunt-ng-annotate": "~0.7",
+    "grunt-ng-annotate": "~0.8",
     "grunt": "~0.4",
     "grunt-contrib-less": "~0.12",
     "grunt-angular-templates": "~0.5"
