--- a/e2e-smoketest/package.json
+++ b/e2e-smoketest/package.json
@@ -13,9 +13,10 @@
     "karma-phantomjs-launcher": "^0.1.4"
   },
   "jspm": {
+    "name": "Moonridge-test",
     "dependencies": {
-      "angular": "^1.3.3",
-      "angular-animate": "^1.3.3",
+      "angular": "^1.3.4",
+      "angular-animate": "^1.3.4",
       "css": "^0.1.0",
       "github:urish/angular-moment": "^0.8.2",
       "jquery": "^2.1.1",
