--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "realtime",
     "mongo",
     "mongoDB",
+    "isomorphic",
     "mean",
+    "meteor",
     "angular",
     "mongoose",
     "mongoosejs"
