--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "moonridge",
-  "version": "0.6.6",
+  "version": "0.6.7",
   "main": "main.js",
   "author": "Capaj <capajj@gmail.com>",
   "description": "Bring your Mongoose models straight into angular web app with live Query support, all thanks to the magic of socket.io",
+  "scripts": {
+    "test": "mocha"
+  },
   "keywords": [
     "socket.io",
     "rpc",
@@ -36,11 +39,13 @@
     "mongoose": "^3.8"
   },
   "devDependencies": {
+    "chai": "^1.10.0",
+    "grunt": "~0.4",
+    "grunt-angular-templates": "~0.5",
+    "grunt-contrib-less": "~0.12",
     "grunt-contrib-uglify": "~0.6",
     "grunt-ng-annotate": "~0.8",
-    "grunt": "~0.4",
-    "grunt-contrib-less": "~0.12",
-    "grunt-angular-templates": "~0.5"
+    "mocha": "^2.1.0"
   },
   "license": "MIT"
 }
