added travis.yml and postscript to package.json

--- a/e2e-smoketest/package.json
+++ b/e2e-smoketest/package.json
@@ -1,6 +1,9 @@
 {
   "name": "Moonridge-test",
   "version": "0.0.6",
+  "scripts": {
+    "postinstall": "jspm install"
+  },
   "dependencies": {
     "lodash": "~2.4",
     "mongoose": "~3.8",
