--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
 - '0.10'
 - '0.11'
+before_install:
+  - cd test/e2e-smoketest && npm install && cd ../..
 deploy:
   provider: npm
   email: capajj@gmail.com
