--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
 - '0.10'
 - '0.11'
 before_install:
-  - cd test/e2e-smoketest && npm install && cd ../..
+  - npm install jspm -g && cd test/e2e-smoketest && npm install && cd ../..
 deploy:
   provider: npm
   email: capajj@gmail.com
