--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
 - '0.10'
 - '0.11'
+services:
+  - mongodb
 before_install:
   - npm install jspm -g && cd test/e2e-smoketest && npm install && cd ../..
 deploy:
