separated client to a different repo/package, bumped version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moonridge",
-  "version": "0.6.8",
+  "version": "0.6.9",
   "main": "main.js",
   "author": "Capaj <capajj@gmail.com>",
   "description": "Bring your Mongoose models straight into angular web app with live Query support, all thanks to the magic of socket.io",
@@ -31,6 +31,7 @@
     "bluebird": "~2.7",
     "express": "^4.11",
     "lodash": "~2.4",
+    "moonridge-client": "^0.6.9",
     "socket.io": "1.2.1",
     "socket.io-rpc": "0.8.9",
     "winston": "~0.8"
