--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moonridge",
-  "version": "0.6.9",
+  "version": "0.6.10",
   "main": "main.js",
   "author": "Capaj <capajj@gmail.com>",
   "description": "Bring your Mongoose models straight into angular web app with live Query support, all thanks to the magic of socket.io",
@@ -28,12 +28,12 @@
   },
   "homepage": "http://capaj.github.io/Moonridge/",
   "dependencies": {
-    "bluebird": "~2.7",
+    "bluebird": "~2.9",
     "express": "^4.11",
     "lodash": "~2.4",
-    "moonridge-client": "^0.6.9",
-    "socket.io": "1.2.1",
-    "socket.io-rpc": "0.8.9",
+    "moonridge-client": "0.6.10",
+    "socket.io": "1.3.2",
+    "socket.io-rpc": "0.8.10",
     "winston": "~0.8"
   },
   "peerDependencies": {
