--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "http://capaj.github.io/Moonridge/",
   "dependencies": {
+    "debug": "^2.2.0",
     "express": "^4.11",
     "lodash": "^3.9",
     "socket.io": "~1.3",
