--- a/.npmignore
+++ b/.npmignore
@@ -2,6 +2,5 @@ node_modules
 npm-debug.log
 tmp
 .idea
-test/bower_components/
-test/node_modules/
-Moonridge-client
+test
+Moonridge-client/node_modules
