--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "express": "^4.11",
     "lodash": "^3.9",
     "socket.io": "~1.3",
-    "socket.io-rpc": "^0.9.8",
-    "winston": "~1"
+    "socket.io-rpc": "^0.9.8"
   },
   "devDependencies": {
     "socket.io-rpc-client": "0.9.11",
