--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "moonridge",
-  "version": "0.8.6",
+  "version": "0.8.7",
   "main": "main.js",
   "author": "Capaj <capajj@gmail.com>",
   "description": "Isomorphic library, which allows you to call Mongoose.js remotely from your frontend in a framework agnostic fashion",
   "scripts": {
     "test": "mocha",
-	"smoke": "node test/e2e-smoketest/server.js"
+    "smoke": "node test/e2e-smoketest/server.js"
   },
   "engines": {
-	"node": "^0.12.0"
+    "node": "^0.12.0"
   },
   "keywords": [
     "socket.io",
@@ -38,12 +38,13 @@
     "express": "^4.11",
     "lodash": "^3.9",
     "socket.io": "~1.3",
-    "socket.io-rpc": "^0.9.8"
+    "socket.io-rpc": "^0.9.8",
+    "traverse": "^0.6.6"
   },
   "devDependencies": {
     "socket.io-rpc-client": "0.9.11",
-    "mongoose": "^4.0.5",
-    "chai": "^3.0.0",
+    "mongoose": "^4.1.0",
+    "chai": "^3.2.0",
     "mocha": "^2.2.0"
   },
   "license": "MIT"
