--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.9.0",
   "main": "main.js",
   "author": "Capaj <capajj@gmail.com>",
-  "description": "Isomorphic library, which allows you to call Mongoose.js remotely from your frontend in a framework agnostic fashion",
+  "description": "Isomorphic library, which allows you to use Mongoose.js models remotely from your frontend in a framework agnostic fashion",
   "scripts": {
     "test": "mocha",
     "smoke": "node test/e2e-smoketest/server.js"
@@ -20,6 +20,7 @@
     "mongo",
     "mongoDB",
     "isomorphic",
+    "universal",
     "mean",
     "meteor",
     "angular",
