--- a/package.json
+++ b/package.json
@@ -38,14 +38,15 @@
     "debug": "^2.2.0",
     "express": "^4.11",
     "lodash": "^3.9",
-	"mongoose": "^4.1.3",
+    "mongoose": "^4.1.3",
     "socket.io": "~1.3",
     "socket.io-rpc": "^0.9.8"
   },
   "devDependencies": {
-    "socket.io-rpc-client": "0.9.11",
     "chai": "^3.2.0",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "morgan": "^1.6.1",
+    "socket.io-rpc-client": "0.9.11"
   },
   "license": "MIT"
 }
