--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moonridge",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "main": "moonridge.js",
   "author": "Capaj <capajj@gmail.com>",
   "description": "Isomorphic library, which allows you to use Mongoose.js models remotely from your frontend in a framework agnostic fashion",
@@ -9,7 +9,7 @@
     "smoke": "node test/e2e-smoketest/server.js"
   },
   "engines": {
-    "node": "^0.12.0"
+    "node": ">=5.0.0"
   },
   "keywords": [
     "socket.io",
@@ -38,7 +38,7 @@
     "debug": "^2.2.0",
     "express": "^4.11",
     "lodash": "^3.9",
-    "mongoose": "^4.1.5",
+    "mongoose": "^4.2.4",
     "socket.io": "~1.3",
     "socket.io-rpc": "^0.9.9"
   },
