--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moonridge",
-  "version": "0.9.5",
+  "version": "0.9.6",
   "main": "moonridge.js",
   "author": "Capaj <capajj@gmail.com>",
   "description": "Isomorphic library, which allows you to use Mongoose.js models remotely from your frontend in a framework agnostic fashion",
@@ -40,13 +40,13 @@
     "lodash": "^3.9",
     "mongoose": "^4.2.4",
     "socket.io": "~1.3",
-    "socket.io-rpc": "^1.0.0"
+    "socket.io-rpc": "^1.0.2"
   },
   "devDependencies": {
     "chai": "^3.4.1",
     "mocha": "^2.3.3",
     "morgan": "^1.6.1",
-    "socket.io-rpc-client": "1.0.0"
+    "socket.io-rpc-client": "^1.0.2"
   },
   "license": "MIT"
 }
