--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moonridge",
-  "version": "0.9.7",
+  "version": "0.9.8",
   "main": "moonridge.js",
   "author": "Capaj <capajj@gmail.com>",
   "description": "Isomorphic library, which allows you to use Mongoose.js models remotely from your frontend in a framework agnostic fashion",
@@ -35,18 +35,22 @@
   },
   "homepage": "http://capaj.github.io/Moonridge/",
   "dependencies": {
+    "baucis": "^1.6.3",
+    "baucis-swagger": "^1.1.2",
     "debug": "^2.2.0",
     "express": "^4.13",
     "lodash": "^3.9",
-    "mongoose": "^4.2.5",
+    "mongoose": "^4.2.8",
     "socket.io": "~1.3",
     "socket.io-rpc": "^1.0.2"
   },
   "devDependencies": {
     "chai": "^3.4.1",
+    "husky": "^0.10.2",
     "mocha": "^2.3.3",
     "morgan": "^1.6.1",
-    "socket.io-rpc-client": "^1.0.2"
+    "socket.io-rpc-client": "^1.0.2",
+    "standard": "^5.4.1"
   },
   "license": "MIT"
 }
