--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "moonridge",
-  "version": "0.9.8",
+  "version": "0.9.9",
   "main": "moonridge.js",
   "author": "Capaj <capajj@gmail.com>",
   "description": "Isomorphic library, which allows you to use Mongoose.js models remotely from your frontend in a framework agnostic fashion",
   "scripts": {
     "test": "mocha",
+    "precommit": "npm run pretest",
+    "pretest": "node_modules/.bin/standard",
     "smoke": "node test/e2e-smoketest/server.js"
   },
   "engines": {
@@ -51,6 +53,12 @@
     "morgan": "^1.6.1",
     "socket.io-rpc-client": "^1.0.2",
     "standard": "^5.4.1"
+  },
+  "standard": {
+    "ignore": [
+      "Moonridge-client/**",
+      "test/**"
+    ]
   },
   "license": "MIT"
 }
