--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Moonridge-client"]
 	path = Moonridge-client
-	url = https://github.com/capaj/Moonridge-client.git
+	url = git@github.com:capaj/moonridge-client.git
