--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,17 @@ node_js:
 - '5'
 services:
 - mongodb
-before_script:
-- sleep 1
+# Handle git submodules yourself
+git:
+  submodules: false
+  # Use sed to replace the SSH URL with the public URL, then initialize submodules
 before_install:
-- npm install jspm -g && cd Moonridge-client && npm install && cd ..
+  - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+  - git submodule update --init --recursive
+before_script:
+  - sleep 1
+before_install:
+  - npm install jspm -g && cd Moonridge-client && npm install && cd ..
 deploy:
   provider: npm
   email: capajj@gmail.com
