--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "^4.13",
     "lodash": "^3.10",
     "mongoose": "^4.3.7",
+    "mongoose-schema-serializer": "^1.0.0",
     "socket.io-rpc": "^1.1.0"
   },
   "devDependencies": {
